# hub

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLOUD.md  DOCKER.md  Dockerfile  GPG-PUBLIC-KEY.asc  LICENSE  README.md  __init__.py  build.py  build.spec  configure_registered_hub.py  conftest.py  django_voice_assistant_tpv.md  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  main.py  main.spec  pyproject.toml  pytest.ini  requirements.txt  sandbox_run.py  test_frp_tunnel.py  test_websocket_e2e.py  version.py
.githooks/: commit-msg  pre-push
.github/: CODEOWNERS
.github/workflows/: build-executables.yml  build-release.yml  build.yml  deploy.yml  docker-build.yml  release.yml
apps/accounts/: admin.py  api.py  apps.py  decorators.py  models.py  signals.py  urls.py  views.py
apps/accounts/middleware/: __init__.py  auth_middleware.py  jwt_middleware.py  language_middleware.py
apps/accounts/migrations/: 0001_initial.py  0001_initial_uuid.py  0002_add_permission_role_models.py  0002_alter_localuser_role.py  0002_localuser_avatar.py  0002_make_cloud_user_id_nullable.py  0002_trusteddevice.py  0003_add_source_to_role.py  0003_populate_role_obj.py  0003_update_role_choices.py  0004_permission_description.py  0004_seed_default_roles.py  (+3 more)
apps/auth/: __init__.py
apps/configuration/: README.md  admin.py  api.py  apps.py  context_processors.py  models.py  scheduler.py  signals.py  urls.py  views.py  views_files.py  views_maintenance.py  views_modules_legacy.py  views_plugins.py
apps/core/: admin.py  api.py  api_base.py  apps.py  bridge_helpers.py  chooser.py  chooser_views.py  context_processors.py  frp_client.py  hooks.py  htmx.py  media_helpers.py  media_views.py  middleware.py  models.py  module_loader.py  module_validator.py  plugin_loader.py  plugin_validator.py  print_helper.py  references.py  runtime_manager.py  signals.py  slots.py  startup.py  update_manager.py  urls.py  utils.py  views.py  views_frp.py  views_update.py  websocket_client.py
apps/dashboard/: __init__.py
apps/hardware/: apps.py
apps/main/: __init__.py  urls.py
apps/marketplace/: __init__.py  apps.py  urls.py  views.py
apps/modules_runtime/: apps.py  decorators.py  loader.py  manager.py  middleware.py  navigation.py  router.py  setup_discovery.py  subscription_checker.py
apps/plugins/: __init__.py  admin.py  apps.py  models.py  runtime_manager.py  views.py
apps/plugins_admin/: apps.py  models.py  urls.py  views.py
apps/plugins_runtime/: apps.py  decorators.py  discovery.py  loader.py  manager.py  router.py  subscription_checker.py
apps/public/: urls.py  views.py
apps/setup/: __init__.py  apps.py  services.py  urls.py  views.py
apps/sync/: admin.py  apps.py  models.py  startup.py  urls.py  views.py  views_backup.py  views_bug_report.py  views_frp.py  views_update.py
apps/system/: __init__.py
apps/ui/: README.md  __init__.py  apps.py
assets/: app_icon.icns
cache/: jwt_public_key.pem
components/: COMPONENT_ANALYSIS.md  README.md
components/empty_state/: README.md  empty_state.html
components/page_header/: README.md  page_header.html
components/stat_card/: README.md  stat_card.html
components/status_badge/: README.md  status_badge.html
components/toast_helper/: README.md
config/: countries.py  currencies.py  frpc.toml  module_allowed_deps.py  module_categories.py  paths.py  plugin_allowed_deps.py  plugin_categories.py  settings.py  urls.py
config/settings/: __init__.py  base.py  desktop_linux.py  desktop_macos.py  desktop_windows.py  local.py  sandbox.py  settings.py  web.py
docs/: BUILDING.md  CHANGELOG.md  CLOUD.md  DATA_LOCATIONS.md  GITHUB_ACTIONS_OPTIMIZATION.md  GLOBAL_CONFIGURATION.md  GPG_KEY_STORAGE.md  GPG_SETUP.md  HARDWARE_POS.md  HUB_POS_UI_ANALYSIS.md  KIOSK_MODE.md  MODULE_ACTIVATION_FLOW.md  MODULE_DEPENDENCIES.md  MODULE_ICONS.md  MODULE_LIBRARIES_COMPLETE.md  MODULE_RUNTIME_ANALYSIS.md  MODULE_SUBSCRIPTION_USAGE.md  PATHS.md  PLUGIN_ACTIVATION_FLOW.md  PLUGIN_DEPENDENCIES.md  PLUGIN_LIBRARIES_COMPLETE.md  PLUGIN_RUNTIME_ANALYSIS.md  PLUGIN_SUBSCRIPTION_USAGE.md  PRINTING_SYSTEM.md  PRINTING_WEB_VS_DESKTOP.md  README.md  ROLES_AND_PERMISSIONS.md  ROLES_PERMISSIONS.md  SIGNATURE_VERIFICATION.md  TESTING.md  TODO.md  TRANSLATIONS.md
docs/dev/: creating-modules.md
docs/help/: 01-getting-started.md  02-installation.md  03-bridge.md  04-modules.md  05-users-and-roles.md  06-settings.md  07-faq.md
installers/: README.md
installers/linux/: create-appimage.sh
installers/macos/: sign-and-package.sh
installers/windows/: build-installer.ps1  setup.iss
kiosk/: README.md  launch-dev-kiosk.bat  launch-dev-kiosk.sh  launch-kiosk.bat  launch-kiosk.sh
plugins/: .gitignore  PLUGINS_OFICIALES.md  PLUGIN_CATALOG.md  README.md
plugins/.template/: README.md
plugins/example/: plugin.json  views.py
pyi_hooks/: hook-django.py
scripts/: configure_frp_dev.py  generate-gpg-key.sh  generate_icons.py  generate_icons_large.py  generate_icons_pillow.py  sign-release.sh
static/: README.md
static/css/: hub.css  ionic-theme.css  main.css  no-more-tables.css  style.css  tailwind-ionic.css
static/ionicons/: readme.md
static/js/: bridge.js  htmx-sse.min.js  media-picker.js  serviceworker.js  toast-helper.js  ui-helpers.js
templates/: 403.html  404.html  405.html  500.html  app.html  app_base.html  base.html  manifest.json  module_base.html  offline.html  page_base.html
templates/core/: update_notification.html
templates/drf_spectacular/: swagger_ui.html
templates/partials/: bug_report_modal.html  tabbar_oob.html
templates/settings/: updates.html
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_full_flow.py
tests/integration/: __init__.py  test_api.py  test_wizard.py
tests/load/: locustfile.py  monitor.py
tests/unit/: test_base_models.py  test_configuration.py  test_core_services.py  test_health_and_navigation.py  test_install_module.py  test_marketplace.py  test_models.py  test_modules_runtime.py  test_paths.py  test_plugins_runtime.py  test_setup_wizard.py
(+483 files in other folders)
